track, photo search, graph, qr scan

--- a/Dairy_Care_System/templates/customerpage.html
+++ b/Dairy_Care_System/templates/customerpage.html
@@ -54,6 +54,13 @@
 
     <br><br><br>
 
+    <!-- WhatsApp Floating Chat Button -->
+    <div class="whatsapp-chat">
+        <a href="https://wa.me/916282752569?text=Hello!%20I%20need%20help%20with%20Dairy%20Care%20System." target="_blank">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
+
     <center>
         <!-- Message and Quote -->
         <div class="message">
