--- a/Dairy_Care_System/templates/farmownerpage.html
+++ b/Dairy_Care_System/templates/farmownerpage.html
@@ -52,6 +52,7 @@
         <a href="{% url 'farmerproductstock' %}"><i class="fas fa-boxes"></i> Stock Details</a><br>
         <a href="{% url 'stocknotification' %}"><i class="fas fa-bell"></i> Notifications</a><br>
         <a href="{% url 'feedbackreview' %}"><i class="fas fa-comments"></i> Feedback Review</a><br>
+        <a href="{% url 'salegraph' %}"><i class="fas fa-chart-bar"></i> Sale</a><br>
     </div>
 
     <!-- Navigation Bar -->
