--- a/Dairy_Care_System/templates/ordersummary.html
+++ b/Dairy_Care_System/templates/ordersummary.html
@@ -207,7 +207,7 @@
     </style>
 </head>
 <body>
-    <a href="{% url 'customerpage' %}" class="back-link">&larr; BACK</a>
+    <a href="{% url 'orderhistory' %}" class="back-link">&larr; BACK</a>
     <button class="download-btn" onclick="window.print()">
         <i class="fas fa-print"></i> Print Receipt
     </button>
