--- a/Dairy_Care_System/dairy/static/css/customerpage.css
+++ b/Dairy_Care_System/dairy/static/css/customerpage.css
@@ -371,3 +371,30 @@ footer {
         padding: 20px;
     }
 }
+
+.whatsapp-chat {
+    position: fixed;
+    bottom: 110px;
+    right: 40px;
+    background-color: #14d45b;
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    z-index: 1000;
+}
+
+.whatsapp-chat i {
+    font-size: 25px;
+    color: white;
+}
+
+.whatsapp-chat:hover {
+    transform: scale(1.1) rotate(5deg);
+    box-shadow: 0 8px 25px rgba(52, 152, 219, 0.3);
+}
